@@ -1,4 +1,9 @@
 Verifi Gateway
 
-* Created by Paul Hepworth on 2007-05-12.
+* Contributed by Paul Hepworth on 2007-05-12.
 * Portions of Verifi Gateway Copyright (c) 2007 Paul Hepworth
+
+Plug 'N Pay Gateway
+
+* Contributed by Ryan Norbauer
+
