@@ -23,3 +23,4 @@ require 'active_merchant/billing/gateways/realex'
 require 'active_merchant/billing/gateways/secure_pay'
 require 'active_merchant/billing/gateways/trans_first'
 require 'active_merchant/billing/gateways/verifi'
+require 'active_merchant/billing/gateways/plugnpay'
